  function's environment is used as the parent.  This is convenient for
  defining proxy objects: e.g. in the following function f2 is same as f
  except a proxy proto object has been wedged between it and its prior
  parent containing the a variable: f2 <- with(proto(f, a = 1, g = f), g)
  https://stat.ethz.ch/pipermail/r-devel/2008-March/048625.html

VERSION 0.3-8

o minor changes to satisfy R 2.6.0

VERSION 0.3-7

o FAQ added as Appendix A of vignette

o str.proto added (modified code of Tom Short)

o the class of p$fun is now "instantiatedProtoMethod" and 
  print.instantiatedProtoMethod provided (modified code of Tom Short)

o "$.proto" now has a third argument which, if present, is a list of
  arguments at which to evaluate the instantiated method.  Intended for
  use within sapply/lapply/etc.  See examples in ?proto .

o modified DESCRIPTION to point to new home page

VERSION 0.3-6

o order of arguments in proto and as.proto.list changed to 
  address a bug

VERSION 0.3-5

o new arg funEnvir= on proto and as.proto.list [experimental]

o new arg SELECT= on as.proto [experimental]

VERSION 0.3-4

o new function graph.proto using Rgraphviz replaces dot.proto

o updated vignettes

o added proto-package.Rd (viewable via package?proto)

VERSION 0.3-3

o updated NEWS, README, WISHLIST and moved to to inst directory

VERSION 0.3-2

o bug fix (recursion bug)

o documentation improvements (vignette, .Rd files, README)

VERSION 0.3-1

o .Rd file improvements

VERSION 0.3-0

o that/super changed to .that/.super.

o .Name changed to ..Name in dot.proto

o improvements to .Rd files and vignette

VERSION 0.2-6

o demo index file fixed and demo renamed and enhanced

o proto.bib updated

o consistent use of obj$with(meth) in examples and demo where method
  not used in the context of a call

VERSION 0.2-5

o vignette and reference card now pass R CMD check/build/install

o CHANGES renamed to NEWS

VERSION 0.2-4

o added control argument to dot.proto

VERSION 0.2-3
